src/components/backgroundselector/style/backgroundselector-gf3.less
[ga-background-selector] {
  &.ga-bg-mobile {

    &.ga-open {
      .ga-voidLayer {
        .translate3d(0, 0, 0);
        -ms-transform: translateY(0); /* IE 9*/
      }

      .ga-bg-layer-0 {
        bottom: 101px;
        @media (max-width: @screen-tablet) {
          bottom: 76px;
        }
      }

      .ga-bg-layer-1 {
        bottom: 150px;
        @media (max-width: @screen-tablet) {
          bottom: 125px;
        }
      }

      .ga-bg-layer-2 {
        bottom: 199px;
        @media (max-width: @screen-tablet) {
          bottom: 174px;
        }
      }

      .ga-bg-layer-3 {
        bottom: 248px;
        @media (max-width: @screen-tablet) {
          bottom: 223px;
        }
      }

      .ga-bg-layer-4 {
        bottom: 297px;
        @media (max-width: @screen-tablet) {
          bottom: 272px;
        }
      }
    }
  }

  &.ga-bg-desktop {
    &.ga-open {
      .ga-bg-layer-0 {
        .translate3d(-25px, 0, 0);
        -ms-transform: translateY(-25px); /* IE 9*/
      }

      .ga-bg-layer-1 {
        .translate3d(-126px, 0, 0);
        -ms-transform: translateY(-126px); /* IE 9*/
        @media (max-width: @screen-tablet) {
          .translate3d(-128px, 0, 0);
          -ms-transform: translateY(-128px); /* IE 9*/
        }
      }

      .ga-bg-layer-2 {
        .translate3d(-227px, 0, 0);
        -ms-transform: translateY(-227px); /* IE 9*/
        @media (max-width: @screen-tablet) {
          .translate3d(-231px, 0, 0);
          -ms-transform: translateY(-231px); /* IE 9*/
        }
      }

      .ga-bg-layer-3 {
        .translate3d(-328px, 0, 0);
        -ms-transform: translateY(-328px); /* IE 9*/
        @media (max-width: @screen-tablet) {
          .translate3d(-334px, 0, 0);
          -ms-transform: translateY(-334px); /* IE 9*/
        }
      }
    }
  }
}

